--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    user-select: none;
+    font-family: "Nunito";
+  }
+  
+  html,
+  body {
+    height: 100%;
+  }
