--- a/src/app/modules/home/pages/home/home-hero/home-hero.component.html
+++ b/src/app/modules/home/pages/home/home-hero/home-hero.component.html
@@ -1,1 +1,10 @@
-<section>hero</section>
+<section class="hero-container">
+  <h1>
+    Реформування системи <br />
+    містобудування
+  </h1>
+  <button class="hero-play-btn">
+    <img src="/assets/img/icons/play.svg">
+    <span>Відеотрансляція</span>
+  </button>
+</section>
