--- a/src/app/shared/modules/layout/components/header/header.component.html
+++ b/src/app/shared/modules/layout/components/header/header.component.html
@@ -1,1 +1,11 @@
-<header></header>
+<header>
+    <div class="header-container">
+        <div class="header-logo">
+            <img src="/assets/img/icons/logo-header.svg">
+        </div>
+        <button class="header-present-btn">
+            <img class="present-play" src="/assets/img/icons/arrow.svg">
+            <span>Презентація</span>
+        </button>
+    </div>
+</header>
