--- a/src/app/modules/home/pages/home/home-hero/home-hero.component.scss
+++ b/src/app/modules/home/pages/home/home-hero/home-hero.component.scss
@@ -1,4 +1,116 @@
-@import 'bootstrap/scss/mixins';
-@import 'src/assets/scss/theme-angular-starter1/bootstrap/variables';
+@import "bootstrap/scss/mixins";
+@import "src/assets/scss/theme-angular-starter1/bootstrap/variables";
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  min-height: 500px;
 
 
+  background: url("/assets/img/hero-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  h1 {
+    font-size: 56px;
+    font-weight: 400;
+    line-height: 67.16px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-top: -2px;
+    margin-bottom: 0;
+  }
+}
+
+.hero-play-btn {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 241px;
+  height: 56px;
+  margin-top: 50px;
+  padding: 16px 34px;
+  gap: 10px;
+
+  background: #000000;
+  border: 2px solid #000000;
+  border-radius: 48px;
+
+  &:hover {
+    opacity: 1;
+    transform: scale(1.02);
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+  
+  span {
+    font-family: "eUkraineHead";
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #fff;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 1024px) {
+  .hero-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+
+    background: url("/assets/img/hero-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    h1 {
+      font-family: eUkraine;
+      font-size: 35px;
+      font-weight: 400;
+      line-height: 42px;
+      letter-spacing: -0.02em;
+      text-align: center;
+      margin-top: 30px;
+    }
+  }
+
+  .hero-play-btn {
+    width: 250px;
+    height: 53px;
+    top: 349px;
+    left: 53px;
+
+    border-radius: 48px;
+    border: 2px;
+    gap: 10px;
+
+    background: #000000;
+    border: 2px solid #000000;
+    border-radius: 48px;
+
+    span {
+      font-family: "eUkraineHead";
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+      font-size: 16px;
+      line-height: 24px;
+      letter-spacing: -0.02em;
+      text-align: center;
+      color: #fff;
+    }
+  }
+}
