--- a/src/app/modules/home/pages/home/home-projects/home-projects.component.scss
+++ b/src/app/modules/home/pages/home/home-projects/home-projects.component.scss
@@ -1,3 +1,10 @@
 @import 'bootstrap/scss/mixins';
 @import 'src/assets/scss/theme-angular-starter1/bootstrap/variables';
 
+section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50vh;
+}
