--- a/src/app/shared/modules/layout/components/header/header.component.scss
+++ b/src/app/shared/modules/layout/components/header/header.component.scss
@@ -1,1 +1,72 @@
+.header-container {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-inline: 160px;
+  margin-top: 44px;
+}
 
+.header-logo {
+  width: 187px;
+  height: 43.53px;
+}
+
+.header-present-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3px;
+  width: 203.25px;
+  height: 56px;
+  gap: 10px;
+  border: 2px solid black;
+  border-radius: 48px;
+
+  &:hover {
+    opacity: 1;
+    transform: scale(1.02);
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
+
+  span {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: -0.02em;
+    text-align: center;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 1024px) {
+  .header-container {
+    padding-inline: 0px;
+    margin-top: 27px;
+    padding-inline: 20px;
+  }
+
+  .header-logo {
+    margin-top: 5px;
+
+    img {
+      max-width: unset;
+      width: 128px;
+    }
+  }
+
+  .header-present-btn {
+    width: 217px;
+    height: 36px;
+    left: 144px;
+    padding: 4px 24px 4px 24px;
+    border-radius: 27px;
+    border: 1px;
+    gap: 10px;
+
+    border: 2px solid black;
+    border-radius: 48px;
+  }
+}
