--- a/src/app/modules/home/pages/home/home-hero/home-hero.component.scss
+++ b/src/app/modules/home/pages/home/home-hero/home-hero.component.scss
@@ -49,7 +49,7 @@
   &:active {
     opacity: 0.5;
   }
-  
+
   span {
     font-family: "eUkraineHead";
     font-weight: 400;
@@ -63,7 +63,7 @@
   }
 }
 
-@media (min-width: 375px) and (max-width: 1024px) {
+@media (min-width: 320px) and (max-width: 1024px) {
   .hero-container {
     display: flex;
     flex-direction: column;
@@ -78,18 +78,23 @@
 
     h1 {
       font-family: eUkraine;
-      font-size: 35px;
+      font-size: 30px;
       font-weight: 400;
-      line-height: 42px;
+      line-height: 35.98px;
       letter-spacing: -0.02em;
       text-align: center;
       margin-top: 30px;
     }
+
+    img {
+      height: 15px;
+      width: 15px;
+    }
   }
 
   .hero-play-btn {
-    width: 250px;
-    height: 53px;
+    width: 211px;
+    height: 48px;
     top: 349px;
     left: 53px;
 
@@ -106,7 +111,7 @@
       font-weight: 400;
       font-style: normal;
       font-display: swap;
-      font-size: 16px;
+      font-size: 13px;
       line-height: 24px;
       letter-spacing: -0.02em;
       text-align: center;
