--- a/src/app/modules/home/pages/home/home-hero/home-hero.component.scss
+++ b/src/app/modules/home/pages/home/home-hero/home-hero.component.scss
@@ -10,7 +10,6 @@
   height: 100vh;
   min-height: 500px;
 
-
   background: url("/assets/img/hero-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,15 +39,6 @@
   background: #000000;
   border: 2px solid #000000;
   border-radius: 48px;
-
-  &:hover {
-    opacity: 1;
-    transform: scale(1.02);
-  }
-
-  &:active {
-    opacity: 0.5;
-  }
 
   span {
     font-family: "eUkraineHead";
@@ -116,6 +106,19 @@
       letter-spacing: -0.02em;
       text-align: center;
       color: #fff;
+    }
+  }
+}
+
+@media all and (min-width: 1024px) {
+  .hero-play-btn {
+    &:hover {
+      opacity: 1;
+      transform: scale(1.02);
+    }
+
+    &:active {
+      opacity: 0.5;
     }
   }
 }
