--- a/src/app/modules/home/pages/home/home-projects/home-projects.component.scss
+++ b/src/app/modules/home/pages/home/home-projects/home-projects.component.scss
@@ -1,10 +1,136 @@
-@import 'bootstrap/scss/mixins';
-@import 'src/assets/scss/theme-angular-starter1/bootstrap/variables';
+@import "bootstrap/scss/mixins";
+@import "src/assets/scss/theme-angular-starter1/bootstrap/variables";
 
 section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 100px 0 46px;
+}
+
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 72rem;
+  margin-right: -32px;
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  max-width: 352px;
+  margin-right: 32px;
+  margin-bottom: 74px;
+  font-family: "eUkraine";
+  text-align: left;
+
+  .counter {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 50vh;
+    border-radius: 30px;
+    width: 63px;
+    height: 37px;
+    position: relative;
+    margin-bottom: 20px;
+    background: #f4f4f4;
+
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+  h3 {
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 43px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+
+  p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 1024px) {
+    section {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 100px 0 46px;
+      }
+      
+      .projects-container {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 72rem;
+        margin-right: -32px;
+      }
+      
+      .project {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 100%;
+        height: 100%;
+        max-width: 288px;
+        margin: 0 auto 40px;
+        padding-right: 0;
+        font-family: "eUkraine";
+        text-align: left;
+      
+        .counter {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 30px;
+          width: 63px;
+          height: 37px;
+          position: relative;
+          margin-bottom: 20px;
+          background: #f4f4f4;
+      
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 17px;
+          letter-spacing: 0em;
+          text-align: left;
+        }
+      
+        h3 {
+          font-size: 24px;
+          font-weight: 400;
+          line-height: 28.78px;
+          letter-spacing: 0em;
+          text-align: left;
+          margin-bottom: 20px;
+        }
+      
+        p {
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 16.79px;
+          letter-spacing: 0em;
+          text-align: left;
+        }
+      }
+
 }
