--- a/src/app/shared/modules/layout/components/header/header.component.scss
+++ b/src/app/shared/modules/layout/components/header/header.component.scss
@@ -8,8 +8,8 @@
 }
 
 .header-logo {
-  width: 108px;
-  height: 25.8px;
+  width: 187px;
+  height: 43.53px;
 }
 
 .header-present-btn {
@@ -24,17 +24,16 @@
   border-radius: 48px;
 
   span {
-    font-size: 13px;
+    font-family: "eUkraineHead";
+    font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-    letter-spacing: 0em;
+    letter-spacing: -0.02em;
     text-align: center;
   }
 
   .present-play {
     width: 16.25px;
-    height: 23px;
-
   }
 }
 
@@ -46,6 +45,8 @@
   }
 
   .header-logo {
+    width: 108px;
+    height: 25.8px;
     margin-top: 5px;
 
     img {
@@ -57,13 +58,20 @@
     width: 159.99px;
     height: 32px;
     left: 144px;
-    padding: 4px 24px 4px 24px;
+   
     border-radius: 27px;
     border: 1px;
     gap: 10px;
 
     border: 1px solid black;
     border-radius: 48px;
+  }
+
+  span {
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
   }
 
   .present-play {
