--- a/src/app/shared/modules/layout/components/header/header.component.scss
+++ b/src/app/shared/modules/layout/components/header/header.component.scss
@@ -58,25 +58,25 @@
     width: 159.99px;
     height: 32px;
     left: 144px;
-   
+    padding: 4px 24px 4px 24px;
     border-radius: 27px;
     border: 1px;
     gap: 10px;
 
     border: 1px solid black;
     border-radius: 48px;
-  }
 
-  span {
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: center;
-  }
+    span {
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 24px;
+      text-align: center;
+    }
 
-  .present-play {
+    .present-play {
       width: 10.99px;
       height: 15px;
+    }
   }
 }
 
