--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -2,5 +2,6 @@
 <main>
   <app-home-hero></app-home-hero>
   <app-home-projects></app-home-projects>
+  <app-home-presentation></app-home-presentation>
 </main>
 <app-footer></app-footer>
