--- a/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
+++ b/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
@@ -49,7 +49,7 @@
   background-color: none;
 }
 
-@media (min-width: 320px) and (max-width: 1024px) {
+@include media-breakpoint-between(xs, tb) {
   .present-container {
     display: flex;
     flex-direction: column;
@@ -95,7 +95,7 @@
   }
 }
 
-@media all and (min-width: 1024px) {
+@include media-breakpoint-up(tb){
     .present-play  {
       &:hover {
         opacity: 1;
