--- a/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
+++ b/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
@@ -1,6 +1,16 @@
 @import "bootstrap/scss/mixins";
 @import "src/assets/scss/theme-angular-starter1/bootstrap/variables";
 
+.video-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 808px;
+  background-color: aquamarine;
+}
+
 .present-container {
   display: flex;
   flex-direction: column;
