--- a/src/app/shared/modules/layout/components/header/header.component.scss
+++ b/src/app/shared/modules/layout/components/header/header.component.scss
@@ -1,3 +1,6 @@
+@import "bootstrap/scss/mixins";
+@import "src/assets/scss/theme-angular-starter1/bootstrap/variables";
+
 .header-container {
   position: absolute;
   display: flex;
@@ -37,7 +40,7 @@
   }
 }
 
-@include media-breakpoint-between(xs, tb) {
+@include media-breakpoint-between(xs,tb) {
   .header-container {
     padding-inline: 0px;
     margin-top: 27px;
