--- a/src/app/modules/home/pages/home/home-presentation/home-presentation.component.html
+++ b/src/app/modules/home/pages/home/home-presentation/home-presentation.component.html
@@ -11,11 +11,11 @@
 
 <ng-template #video>
   <div class="video-container">
-    <video #videoPlayer (click)="onPause()" autoplay controls>
+    <video #videoPlayer (click)="onPause()" autoplay>
       <source src="/assets/video/diya.mp4" type="video/mp4">
   </video>
   <div class="button-container">
-    <button class="player-btn" (click)="onPause()">{{videoPlayer.paused ? "Play" : "Pause"}}</button>
+    <button class="player-btn" (click)="onPause()">{{isPaused ? "Play" : "Pause"}}</button>
     <button class="player-btn" (click)="onClose()">Close</button>
   </div>
   </div>
