--- a/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
+++ b/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
@@ -2,6 +2,7 @@
 @import "src/assets/scss/theme-angular-starter1/bootstrap/variables";
 
 .video-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,25 +15,26 @@
   background-repeat: no-repeat;
 
   .button-container {
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-    margin-top: 2rem;
+    gap: 2rem;
+    bottom: 3rem;
 
     .player-btn {
       width: 100px;
       height: 50px;
-      background: #000000;
+      background: #fff;
       border-radius: 48px;
-      color: white;
+      color: black;
+      opacity: 0.8;
     }
   }
 
   video {
-    width: 90%;
-    height: 80%;
-    display: block;
+    width: 100%;
+    height: 100%
   }
 }
 
@@ -86,7 +88,46 @@
 }
 
 @include media-breakpoint-between(xs, tb) {
+
+  .video-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 179.56px;
+  
+    background: url("/assets/img/present-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+  
+    .button-container {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      bottom: 1rem;
+  
+      .player-btn {
+        width: 75px;
+        height: 25px;
+        background: #fff;
+        border-radius: 48px;
+        color: black;
+        opacity: 0.8;
+      }
+    }
+  
+    video {
+      width: 100%;
+      height: 100%
+    }
+  }
+
   .present-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,13 +137,13 @@
   }
 
   .info-container {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    top: 50px;
-    left: 155px;
+    top: 10px;
+    left: 16px;
 
     .title {
       font-family: eUkraine;
@@ -113,6 +154,7 @@
       text-align: left;
       color: #fff;
     }
+
     .subtitle {
       font-family: eUkraine;
       font-size: 10px;
@@ -125,6 +167,7 @@
   }
 
   .present-play {
+    font-family: eUkraine;
     width: 48px;
     height: 49.2px;
     background-color: none;
@@ -132,7 +175,7 @@
 }
 
 @include media-breakpoint-up(tb){
-    .present-play  {
+    .player-btn  {
       &:hover {
         opacity: 1;
         transform: scale(1.02);
