--- a/src/app/modules/home/pages/home/home-presentation/home-presentation.component.html
+++ b/src/app/modules/home/pages/home/home-presentation/home-presentation.component.html
@@ -15,8 +15,8 @@
       <source src="/assets/video/diya.mp4" type="video/mp4">
   </video>
   <div class="button-container">
-    <button class="player-btn" (click)="onPause()">{{isPaused ? "Play" : "Pause"}}</button>
-    <button class="player-btn" (click)="onClose()">Close</button>
+    <button class="player-btn" (click)="onPause()">{{isPaused ? "Відтворити" : "Пауза"}}</button>
+    <button class="player-btn" (click)="onClose()">Закрити</button>
   </div>
   </div>
 </ng-template>
