--- a/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
+++ b/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
@@ -88,7 +88,6 @@
 }
 
 @include media-breakpoint-between(xs, tb) {
-
   .video-container {
     position: relative;
     display: flex;
@@ -117,6 +116,7 @@
         border-radius: 48px;
         color: black;
         opacity: 0.8;
+        font-size: 10px;
       }
     }
   
