--- a/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
+++ b/src/app/modules/home/pages/home/home-presentation/home-presentation.component.scss
@@ -23,12 +23,13 @@
     bottom: 3rem;
 
     .player-btn {
-      width: 100px;
+      width: 120px;
       height: 50px;
       background: #fff;
       border-radius: 48px;
       color: black;
       opacity: 0.8;
+      font-size: 16px;
     }
   }
 
