--- a/src/app/modules/home/pages/home/home-hero/home-hero.component.html
+++ b/src/app/modules/home/pages/home/home-hero/home-hero.component.html
@@ -3,7 +3,7 @@
     Реформування системи<br />
     містобудування
   </h1>
-  <button class="hero-play-btn">
+  <button class="hero-play-btn" (click)="onPresent()">
     <img src="/assets/img/icons/play.svg">
     <span>Відеотрансляція</span>
   </button>
