--- a/src/app/modules/home/pages/home/home-news/home-news.component.html
+++ b/src/app/modules/home/pages/home/home-news/home-news.component.html
@@ -3,12 +3,26 @@
     <h1 class="title">Щотижневі новини</h1>
     <h4 class="subtitle">Підпишіться, щоб отримувати листи</h4>
   </div>
-  <form class="form-container">
+  <form class="form-container" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="input-container">
-        <input class="email-input" placeholder="Ваш email" />
-        <img class="separator" src="/assets/img/icons/separator.svg" />
+      <input
+        class="email-input"
+        placeholder="Ваш email"
+        type="email"
+        [formControl]="emailFormControl"
+        autoComplete="email"
+      />
+      <img class="separator" src="/assets/img/icons/separator.svg" />
+
+      <div *ngIf="(emailFormControl.hasError('email') && (emailFormControl.dirty ||
+      emailFormControl.touched))" class="error">* Введіть <strong>валідний email</strong></div>
+      <div *ngIf="(emailFormControl.hasError('required') && (emailFormControl.dirty ||
+      emailFormControl.touched))" class="error">* Введіть <strong>валідний email</strong></div>
+
     </div>
-    <button class="sub-btn">Підписатись</button>
-    <div class="desc">Даю згоду на обробку та використання персональних даних</div>
+    <button class="sub-btn" type="submit">Підписатись</button>
+    <div class="desc">
+      Даю згоду на обробку та використання персональних даних
+    </div>
   </form>
 </section>
