--- a/src/app/modules/home/pages/home/home-news/home-news.component.scss
+++ b/src/app/modules/home/pages/home/home-news/home-news.component.scss
@@ -66,6 +66,7 @@
   }
 
   .input-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -88,6 +89,17 @@
 
     .separator {
       width: 100%;
+    }
+
+    .error {
+      position: absolute;
+      top: 25px;
+      width: 250px;
+      margin-top: 0.2rem;
+      padding-left: 0.5rem;
+      text-align: left;
+      color: black;
+      font-size: small;
     }
   }
 
