Add animations to Contacts

--- a/src/app/modules/home/pages/home/home-corruption/home-corruption.component.scss
+++ b/src/app/modules/home/pages/home/home-corruption/home-corruption.component.scss
@@ -37,6 +37,7 @@
     line-height: 43px;
     letter-spacing: 0em;
     text-align: left;
+    margin-bottom: 0px;
   }
 }
 
@@ -82,6 +83,10 @@
     justify-content: center;
     gap: 22px;
     margin-top: 15px;
+  }
+
+  a {
+    transition: transform 0.4s;
   }
 }
 
@@ -131,6 +136,7 @@
       line-height: 29px;
       letter-spacing: 0em;
       text-align: left;
+      width: 100%;
     }
   }
 
@@ -184,14 +190,14 @@
 }
 
 @include media-breakpoint-up(tb) {
-    a {
-        &:hover {
-          opacity: 1;
-          transform: scale(1.04);
-        }
-    
-        &:active {
-          opacity: 0.5;
-        }
-      }
+  a {
+    &:hover {
+      opacity: 1;
+      transform: scale(1.1);
+    }
+
+    &:active {
+      opacity: 0.5;
+    }
+  }
 }
