--- a/src/app/modules/home/pages/home/home-corruption/home-corruption.component.html
+++ b/src/app/modules/home/pages/home/home-corruption/home-corruption.component.html
@@ -41,7 +41,7 @@
     </div>
     <div class="contacts-container">
       <div class="desc">Працює з 09:00 до 18:00</div>
-      <div href="tel:+380971628529" class="number">+38 097 162 85 29</div>
+      <a href="tel:+380971628529" class="number">+38 097 162 85 29</a>
     </div>
   </div>
 </section>
