--- a/src/app/shared/modules/layout/components/footer/footer.component.html
+++ b/src/app/shared/modules/layout/components/footer/footer.component.html
@@ -1,1 +1,40 @@
-<footer></footer>
+<footer class="footer-container">
+  <div class="info-container">
+    <div class="logo">
+      <img src="/assets/img/icons/logo-header-white.svg" />
+    </div>
+    <div class="subtitle">
+      © 2024 Весь контент доступний за ліцензією<br />
+      Creative Commons Attribution 4.0 International license ,якщо не зазначено
+      інше
+    </div>
+  </div>
+
+  <div class="contacts-container">
+    <div class="messengers">
+        <a href="https://www.facebook.com/mintsyfra/" target="_blank">
+            <img src="/assets/img/icons/white/facebook.svg">
+        </a>
+        <a href="https://twitter.com/mintsyfra" target="_blank">
+            <img src="/assets/img/icons/white/twitter.svg">
+        </a>
+        <a href="https://t.me/mintsyfra" target="_blank">
+            <img src="/assets/img/icons/white/telegram.svg">
+        </a>
+        <a href="https://www.instagram.com/mintsyfra.official/" target="_blank">
+            <img src="/assets/img/icons/white/instagram.svg">
+        </a>
+        <a href="https://www.youtube.com/channel/UCJpDqJoUTcjMJgBY-DRtfcg" target="_blank">
+            <img src="/assets/img/icons/white/youtube.svg">
+        </a>
+        <a href="https://t.me/mincifra_bot" target="_blank">
+            <img src="/assets/img/icons/white/chat.svg">
+        </a>
+      </div>
+
+      <a class="email" href="mailto:pr@thedigital.gov.ua">pr@thedigital.gov.ua</a>
+      <a class="email" href="mailto:hello@thedigital.gov.ua">hello@thedigital.gov.ua</a>
+
+    </div>
+  
+</footer>
