--- a/src/app/modules/home/pages/home/home-news/home-news.component.html
+++ b/src/app/modules/home/pages/home/home-news/home-news.component.html
@@ -29,7 +29,7 @@
 
 <ng-template  #content let-c="close" let-d="dismiss">
   <div class="modal-dialog">
-    <div class="modal-content" style="width: 664px; height: 411px;">
+    <div class="modal-content" class="floka" style="width: 664px; height: 411px;">
       <div class="modal-body">
         <button class="close-btn" (click)="d('Cross click')"> 
           <img src="/assets/img/icons/close.svg">
@@ -45,10 +45,6 @@
        </div>
     </div>
   </div>
-
-
-  
-  
 </ng-template>
 
 
