--- a/src/app/modules/home/pages/home/home-news/home-news.component.scss
+++ b/src/app/modules/home/pages/home/home-news/home-news.component.scss
@@ -123,6 +123,12 @@
     letter-spacing: 0em;
     text-align: center;
     color: #ffffff;
+    cursor: pointer;
+
+    &:disabled {
+      opacity: 0.7;
+      cursor:not-allowed;
+    }
   }
 
   .input-container {
