--- a/src/app/modules/home/pages/home/home-news/home-news.component.scss
+++ b/src/app/modules/home/pages/home/home-news/home-news.component.scss
@@ -1,20 +1,12 @@
 @import "bootstrap/scss/mixins";
 @import "src/assets/scss/theme-angular-starter1/bootstrap/variables";
 
-.popup {
-  position: relative;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: 664px;
-  height: 411px;
-}
-
 .action-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;  
+  justify-content: flex-start;
   gap: 43px;
   margin-top: 52px;
   margin-left: 64px;
@@ -29,6 +21,7 @@
   }
 
   .main {
+    max-width: 420px;
     font-size: 20px;
     font-weight: 400;
     line-height: 32px;
@@ -50,14 +43,14 @@
     color: #ffffff;
     margin-top: 17px;
   }
-}
 
-.close-btn {
-  position: absolute;
-  width: 37.59px;
-  height: 36px;
-  top: 16px;
-  right: 16px;
+  .close-btn {
+    position: absolute;
+    width: 37.59px;
+    height: 36px;
+    top: -10px;
+    right: 0px;
+  }
 }
 
 .news-container {
@@ -95,6 +88,15 @@
   }
 }
 
+.loader-form-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 294px;
+  height: 200px;
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
@@ -127,7 +129,7 @@
 
     &:disabled {
       opacity: 0.7;
-      cursor:not-allowed;
+      cursor: not-allowed;
     }
   }
 
@@ -168,17 +170,71 @@
       font-size: small;
     }
   }
+
+  .loader-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: center;
+    width: 294px;
+    height: 64px;
+  }
 }
 
 @include media-breakpoint-between(xs, tb) {
-  .popup {
+  .action-container {
     position: relative;
     display: flex;
+    width: 100%;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 288px;
-    height: 249px;
+    gap: 20px;
+    margin-top: 0px;
+    margin-left: 0px;
+
+    .header {
+      font-size: 26px;
+      font-weight: 400;
+      line-height: 26px;
+      letter-spacing: -0.02em;
+      text-align: left;
+      color: black;
+    }
+
+    .main {
+      min-width: 230px;
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 17px;
+      letter-spacing: -0.02em;
+      text-align: left;
+      color: black;
+    }
+
+    .confirm-btn {
+      width: 184px;
+      height: 48px;
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: -0.02em;
+      text-align: center;
+      border-radius: 48px;
+      background-color: #000000;
+      color: #ffffff;
+      margin-top: 17px;
+    }
+
+    .close-btn {
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: -16px;
+      right: -16px;
+    }
   }
+
   .news-container {
     display: flex;
     flex-direction: column;
@@ -214,6 +270,15 @@
       letter-spacing: -0.02em;
       text-align: left;
     }
+  }
+
+  .loader-form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 150px;
+    height: 100px;
   }
 
   .form-container {
@@ -266,6 +331,15 @@
         font-size: 10px;
       }
     }
+
+    .loader-wrapper {
+      position: relative;
+      display: flex;
+      align-items: center;
+      flex-direction: center;
+      width: 184px;
+      height: 48px;
+    }
   }
 }
 
@@ -281,3 +355,24 @@
     }
   }
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: #FF3D00;
+  border-radius: 50%;
+  position: absolute;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  text-align: center;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
