--- a/src/app/modules/home/pages/home/home-news/home-news.component.scss
+++ b/src/app/modules/home/pages/home/home-news/home-news.component.scss
@@ -90,8 +90,7 @@
 
 .loader-form-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   width: 294px;
   height: 200px;
@@ -169,15 +168,6 @@
       color: black;
       font-size: small;
     }
-  }
-
-  .loader-wrapper {
-    position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: center;
-    width: 294px;
-    height: 64px;
   }
 }
 
@@ -275,7 +265,7 @@
   .loader-form-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     width: 150px;
     height: 100px;
@@ -331,15 +321,6 @@
         font-size: 10px;
       }
     }
-
-    .loader-wrapper {
-      position: relative;
-      display: flex;
-      align-items: center;
-      flex-direction: center;
-      width: 184px;
-      height: 48px;
-    }
   }
 }
 
@@ -360,9 +341,8 @@
   width: 48px;
   height: 48px;
   border: 5px solid #FFF;
-  border-bottom-color: #FF3D00;
+  border-bottom-color: #000000b1;
   border-radius: 50%;
-  position: absolute;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
   text-align: center;
